PARQUET-1878: [C++] lz4 codec is not compatible with Hadoop Lz4Codec

This patch makes arrow's Lz4Codec compatible with the Hadoop Lz4Codec by prepending 8 bytes (two `uint32_t`s representing expected decompressed size in bytes and compressed size in bytes) to arrow's lz4 decompression/compression.

Closes #7789 from patrickpai/PARQUET-1878

Lead-authored-by: Patrick Pai <patrick.m.pai@gmail.com>
Co-authored-by: Antoine Pitrou <antoine@python.org>
Signed-off-by: Wes McKinney <wesm+git@apache.org>